tests/snapshots/run_wpt_conformance__litert_---- reduce_log_sum_exp::reduceLogSumExp_float32_0D_constant_tensor_default_options ----.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "placeholder.https.any.js",
    "placeholder test name",
    "litert",
    "PASS",
)
