tests/snapshots/run_wpt_conformance__litert_abs_float16_negative_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "abs.https.any.js",
    "abs float16 negative 0D scalar",
    "litert",
    "PASS",
)
